--- a/src/App.css
+++ b/src/App.css
@@ -22,7 +22,7 @@
   width: 100%;
 }
 .dsbrightN {
-  padding: 20px 0px;
+  padding: 20px 20px;
   font-size: 20px;
   font-family: sans-serif;
   font-weight: 500;
@@ -32,8 +32,26 @@
   width: 100%;
   padding: 30px 30px;
 }
-.dsbrightAdd, .dsbrightUp, .dsbrightDe, .dsbrightAllC, .dsbrightLiP, .dsbrightToO, .dsbrightCmO, .dsbrightCanO, .dsbrightCanoID, .dsbrightlogout {
+.dsbrightAdd, .dsbrightUp, .dsbrightDe, .dsbrightAllC, .dsbrightLiP, .dsbrightToO, .dsbrightCanO, .dsbrightCanoID,  .dinesh  {
   display: flex;
   justify-content: left;
   align-items: center;
+  padding: 15px 0px;
+}
+.dsbrightlogout1{
+  display: flex;
+  justify-content: left;
+  align-items: center;
+  position: relative;
+  top: 123px;
+}
+.dsbrightlogout {
+  padding: 0px 15px;
+}
+
+.dsbrightAddP, .dsbrightDP, .dsbrightAllc, .dsbrightLip, .dsbrightToo, .dsbrightCano, .dsbrightCanId, .dsbrightUP, .completeOOO {
+  padding: 0px 15px;
+  font-size: 15px;
+  font-weight: 400;
+  font-family: sans-serif;
 }
