--- a/src/App.css
+++ b/src/App.css
@@ -115,3 +115,17 @@
 .mcA, .upCA, .accA {
   display: flex;
 }
+
+.icons {
+  cursor: pointer;
+}
+
+.logout-btn {
+  margin: 11px 10px;
+  padding: 10px 20px;
+  position: absolute;
+  right: 0;
+  background: #0D6CB8;
+  color: #fff;
+  border-radius: 10px;
+}
